# kamel

./: .gitignore  Cargo.toml  README.md
assets/shaders/geometry/: visibility_buffer_pass.frag.glsl  visibility_buffer_pass.mesh.glsl
crates/kamel-bevy/: Cargo.toml
crates/kamel-bevy/src/: lib.rs
crates/kamel-common/: Cargo.toml
crates/kamel-game/: Cargo.toml
crates/kamel-game/src/: main.rs
crates/kamel-render/: Cargo.toml
crates/kamel-render/src/: lib.rs
crates/kamel-render/src/backend/: device.rs  instance.rs  mod.rs  surface.rs  swapchain.rs
crates/kamel-render/src/backend/resource/: buffer.rs
crates/kamel-render/src/backend/util/: message_severity.rs  mod.rs
crates/kamel-render/src/graph/: mod.rs
crates/kamel-render/src/renderer/: mod.rs
crates/kamel-render/src/resource/: shader.rs
